# C-Templates-Up-and-Running

./: .gitignore  CMakeLists.txt  README.md
Chapter01/: ch01_ex01.cpp  ch01_ex02.cpp  ch01_ex03.cpp  ch01_ex04.cpp  ch01_ex05.cpp  ch01_ex06.cpp  ch01_ex07.cpp  ch01_ex08.cpp  getSmaller.cs
Chapter02/: ch02_ex01.cpp
