cmake_minimum_required(VERSION 3.16)
project(cpp_templates_up_and_running)

set(CMAKE_CXX_STANDARD 17)

add_executable(ch01_get_smaller1 Chapter01/ch01_ex01.cpp)
add_executable(ch01_get_smaller2 Chapter01/ch01_ex02.cpp)
add_executable(ch01_get_smaller3 Chapter01/ch01_ex03.cpp)
add_executable(ch01_get_smaller4 Chapter01/ch01_ex04.cpp)
add_executable(ch01_get_smaller5 Chapter01/ch01_ex05.cpp)
add_executable(ch01_get_smaller6 Chapter01/ch01_ex06.cpp)
add_executable(ch01_get_smaller7 Chapter01/ch01_ex07.cpp)
add_executable(ch01_get_smaller8 Chapter01/ch01_ex08.cpp)

add_executable(ch02_class_template Chapter02/ch02_ex01.cpp)
